<resources>
    <string name="app_name">MyClinicPH</string>
    <string name="tvNoAccountYet">No Account yet? Click Here</string>
    <string name="btnLogin">Login</string>
    <string name="etEnterPassword">Enter Password</string>
    <string name="etEmailAddress">Enter Email Address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blank_value">-</string>
    <string name="nav_title_personal_info">Update Profile</string>
    <string name="nav_title_schedule">Schedule an appointment</string>
    <string name="confirmation">Confirmation</string>
    <string name="change_email_password">Change Email/Password</string>
    <string name="update_phone">Update Phone</string>
    <string name="update_last_name">Update Last Name</string>
    <string name="update_first_name">Update First Name</string>
    <string name="patient_info">Patient\'s Info</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="owner">©LouchinCejar</string>
    <string name="change_email_auth">CHANGE EMAIL: TYPE CORRECT CREDENTIALS TO PROCEED</string>
    <string name="authentication_email">Authentication Email</string>
    <string name="authentication_password">Authentication Password</string>
    <string name="authenticate">Authenticate</string>
    <string name="updated_email">Updated Email</string>
    <string name="updated_password">Updated Password</string>
    <string name="email_disabled">Email: (disabled)</string>
    <string name="password_authentication">Please enter password for authentication</string>
    <string name="please_enter_new_email">Please enter new email:</string>
    <string name="loading_dialog">Loading...</string>
    <!-- health api ph-->
    <string name="health_news_api">79ff0812c8a64196bc8915db2042adee</string>

    <string name="category_name">CATEGORY NAME:</string>
    <string name="doctors_name">PHYSICIANS NAME:</string>
    <string name="patients_name">PATIENTS NAME:</string>
    <string name="schedule_date">SCHEDULE DATE:</string>
    <string name="created_date">CREATED DATE:</string>
    <string name="reservation_id">RESERVATION ID:</string>
    <string name="schedule_of_visit">Schedule of Visit</string>
    <string name="choose_attending_physician">Choose Attending Physician</string>
    <string name="choose_category">Choose Category</string>
    <string name="patient_s_name">Patient\'s Name</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_time">Select Time</string>
    <string name="title_activity_update_reservation">UpdateReservationActivity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="update_reservation">Update Reservation</string>
    <string name="title_activity_destination">DestinationActivity</string>
    <string name="your_reservations">Your Reservations</string>
    <string name="no_results_found">NO RESULTS \nFOUND</string>
    <string name="total_of_history">Total of history:</string>
    <string name="already_have_an_account_click_here">Already have an account? Click here!</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
</resources>