<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ChangeEmailActivity">

    <FrameLayout
        android:id="@+id/changeEmailTopNav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayoutChangeEmailBottomAppNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeEmailTopNav"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_disabled"/>
        <EditText
            android:id="@+id/auth_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authentication_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/custom_input"
            android:padding="10dp"
            android:maxLines="1"
            android:enabled="false"/>
        <TextView
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_authentication"/>
        <EditText
            android:id="@+id/auth_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authentication_password"
            android:inputType="textPassword"
            android:background="@drawable/custom_input"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:imeOptions="actionDone"/>
        <Button
            android:id="@+id/authenticate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_green"
            android:text="@string/authenticate"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/change_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayoutChangeEmailBottomAppNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_new_email"/>

        <EditText
            android:id="@+id/change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:hint="@string/updated_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:padding="10dp"
            android:imeOptions="actionNext"/>
        <EditText
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:hint="@string/updated_password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:padding="10dp"
            android:imeOptions="actionDone"/>
        <Button
            android:id="@+id/change_email_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_green"
            android:text="@string/confirmation"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frameLayoutChangeEmailBottomAppNavBar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/changeEmailTopNav"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>