<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.updateReservationFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_translucent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E7E7EC"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">
                <TextView
                    android:fontFamily="@font/ubuntu_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/category_name"/>
                <Spinner
                    android:id="@+id/spUpdateCategory"
                    android:fontFamily="@font/ubuntu_bold"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>
                <TextView
                    android:fontFamily="@font/ubuntu_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/doctors_name"/>
                <Spinner
                    android:id="@+id/spUpdateDoctorsName"
                    android:fontFamily="@font/ubuntu_bold"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:fontFamily="@font/ubuntu_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:textAllCaps="true"
                    android:text="@string/schedule_of_visit"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnUpdateAppointmentDate"
                    style="?android:spinnerStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/select_a_date"
                    android:textColorHint="#737373"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnUpdateAppointmentTime"
                    style="?android:spinnerStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/select_time"
                    android:textColorHint="#737373"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnCloseFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Close"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>